--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "setup": "node ./contentful/setup.js $CONTENTFUL_SPACE_ID $CONTENTFUL_MANAGEMENT_TOKEN"
   },
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.4.0",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
     "classnames": "2.3.1",
-    "date-fns": "2.22.1",
+    "date-fns": "2.25.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@fortawesome/fontawesome-free": "5.15.4",
+    "@popperjs/core": "2.10.2",
+    "@tailwindcss/forms": "0.3.4"
   },
   "devDependencies": {
-    "autoprefixer": "10.2.6",
-    "contentful-import": "^7.8.7",
-    "postcss": "8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "10.4.0",
+    "contentful-import": "^8.2.24",
+    "postcss": "8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
