--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@fortawesome/fontawesome-free": "5.15.4",
+    "@popperjs/core": "2.10.2",
+    "@tailwindcss/forms": "0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
     "classnames": "2.3.1",
     "date-fns": "2.25.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@fortawesome/fontawesome-free": "5.15.4",
-    "@popperjs/core": "2.10.2",
-    "@tailwindcss/forms": "0.3.4"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
