--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "classnames": "2.3.1",
     "date-fns": "2.25.0",
     "next": "latest",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
