--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "2.3.1",
     "date-fns": "2.25.0",
+    "firebase": "^9.4.1",
     "next": "latest",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
