--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "autoprefixer": "10.2.6",
     "contentful-import": "^7.8.7",
+    "dotenv": "^10.0.0",
+    "isomorphic-unfetch": "^3.1.0",
     "postcss": "8.3.5",
     "tailwindcss": "^2.2.4"
   }
