--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "csvtojson": "^2.0.10",
     "date-fns": "2.25.0",
     "firebase": "^9.4.1",
+    "firebase-admin": "^10.0.1",
     "next": "latest",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
