--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "twilio": "^3.73.0"
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
