--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.10.2",
+    "@sendgrid/mail": "^7.6.0",
     "@tailwindcss/forms": "0.3.4",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "2.3.1",
