--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.25.0",
     "twilio": "^3.73.0"
   },
   "devDependencies": {
