--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
+    "react-toastify": "^8.1.0",
     "twilio": "^3.73.0"
   },
   "devDependencies": {
