--- a/.env.local.example
+++ b/.env.local.example
@@ -1,4 +1,11 @@
-CONTENTFUL_SPACE_ID=
-CONTENTFUL_ACCESS_TOKEN=
-CONTENTFUL_PREVIEW_ACCESS_TOKEN=
+# make sure all new line is replaced with \n
+FIREBASE_PRIVATE_KEY=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PROJECT=
+TWILIO_MSG_SERVICEID=
+TWILIO_API_KEY=
+TWILIO_ACCOUNT=
 CONTENTFUL_PREVIEW_SECRET=
+CONTENTFUL_PREVIEW_ACCESS_TOKEN=
+CONTENTFUL_ACCESS_TOKEN=
+CONTENTFUL_SPACE_ID=
