--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "2.25.0",
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.1",
+    "js-file-download": "^0.4.12",
     "next": "latest",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
