--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.10.2",
     "@sendgrid/mail": "^7.6.0",
+    "@stripe/stripe-js": "^1.23.0",
     "@tailwindcss/forms": "0.3.4",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "2.3.1",
@@ -19,7 +20,7 @@
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.1",
     "js-file-download": "^0.4.12",
-    "next": "latest",
+    "next": "^12.1.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
     "react-toastify": "^8.1.0",
+    "stripe": "^8.205.0",
     "twilio": "^3.73.0"
   },
   "devDependencies": {
