--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1",
     "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
