--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "2.10.2",
     "@sendgrid/mail": "^7.6.0",
     "@stripe/stripe-js": "^1.23.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "0.3.4",
     "@tailwindcss/typography": "^0.4.1",
     "classnames": "2.3.1",
