--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^17.0.2",
     "react-avatar-editor": "^12.0.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
     "react-toastify": "^8.1.0",
