--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
+    "react-simple-wysiwyg": "^2.1.1",
     "react-toastify": "^8.1.0",
     "stripe": "^8.205.0",
     "twilio": "^3.73.0"
