--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "diacritic": "^0.0.2",
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.1",
+    "google-map-react": "^2.2.0",
     "js-file-download": "^0.4.12",
     "next": "^12.1.0",
     "pg": "^8.7.3",
