--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@hookform/resolvers": "^2.9.10",
     "@popperjs/core": "2.10.2",
     "@sendgrid/mail": "^7.6.0",
     "@stripe/stripe-js": "^1.23.0",
@@ -36,7 +37,8 @@
     "react-simple-wysiwyg": "^2.1.1",
     "react-toastify": "^8.1.0",
     "stripe": "^8.205.0",
-    "twilio": "^3.73.0"
+    "twilio": "^3.73.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "10.2.6",
