--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "diacritic": "^0.0.2",
     "firebase": "^9.4.1",
     "firebase-admin": "^10.0.1",
+    "react-select": "^5.4.0",
     "google-map-react": "^2.2.0",
     "js-file-download": "^0.4.12",
     "next": "^12.1.0",
