--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "react": "^17.0.2",
     "react-avatar-editor": "^12.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-countdown": "^2.3.2",
+    "react-countdown": "^2.3.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.25.0",
     "react-select": "^5.4.0",
     "react-simple-wysiwyg": "^2.1.1",
     "react-toastify": "^8.1.0",
+    "spin-wheel": "^5.0.2",
     "stripe": "^8.205.0",
     "twilio": "^3.73.0",
     "yup": "^0.32.11"
